[package]
name = "pedersen_curve"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pedersen_curve"
path = "src/lib.rs"

[dependencies]
# paritys scale codec locks us here
bitvec = "0.20.4"
# Use our fork of ff. ff currently causes a bitvec-funty clash with our ethereum deps.
# We've modified ff to not rely on bitvec (note that ff features are broken: https://github.com/zkcrypto/ff/issues/69).
# We can use normal ff once it and `ethabi` (via `web3`) play nice.
ff = { git = "https://github.com/eqlabs/ff", branch = "derive_bitvec", default-features = false, features = [
    "derive",
    "alloc",
] }

[dev-dependencies]
pretty_assertions = "1.0.0"
